{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 160,
  "lineage": "2f25f20c-cfb4-460d-2bf1-d4da751a0a77",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee3dd41c47751fe6",
            "arn": "arn:aws:ec2:us-east-1:827518711034:instance/i-075446d84323b5c5e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-075446d84323b5c5e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0497c57b997f11d01",
            "private_dns": "ip-10-0-0-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.180",
            "public_dns": "ec2-50-17-2-221.compute-1.amazonaws.com",
            "public_ip": "50.17.2.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073570ed411ba6643",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6d4a09525936f89",
            "tags": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4e66bd8f922e3d1"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee3dd41c47751fe6",
            "arn": "arn:aws:ec2:us-east-1:827518711034:instance/i-08dcc1fd574cc5364",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-08dcc1fd574cc5364",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aecdf724026d860c",
            "private_dns": "ip-10-0-1-63.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.63",
            "public_dns": "ec2-54-92-178-184.compute-1.amazonaws.com",
            "public_ip": "54.92.178.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00850e2b3341847bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e69840a804212945",
            "tags": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4e66bd8f922e3d1"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globo-web-app-development-28859",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:827518711034:loadbalancer/app/globo-web-alb/11406c39f0210db1",
            "arn_suffix": "app/globo-web-alb/11406c39f0210db1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-alb-1289370999.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:827518711034:loadbalancer/app/globo-web-alb/11406c39f0210db1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-055b170b0cae01a3e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d6d4a09525936f89"
              },
              {
                "subnet_id": "subnet-0e69840a804212945"
              }
            ],
            "subnets": [
              "subnet-0d6d4a09525936f89",
              "subnet-0e69840a804212945"
            ],
            "tags": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "vpc_id": "vpc-0cb2e1ab4be13f606",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:827518711034:listener/app/globo-web-alb/11406c39f0210db1/62130e10012ef537",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:827518711034:targetgroup/nginx-alb-tg/71b6d8688dedf16c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:827518711034:listener/app/globo-web-alb/11406c39f0210db1/62130e10012ef537",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:827518711034:loadbalancer/app/globo-web-alb/11406c39f0210db1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:827518711034:targetgroup/nginx-alb-tg/71b6d8688dedf16c",
            "arn_suffix": "targetgroup/nginx-alb-tg/71b6d8688dedf16c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:827518711034:targetgroup/nginx-alb-tg/71b6d8688dedf16c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cb2e1ab4be13f606"
          },
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:827518711034:targetgroup/nginx-alb-tg/71b6d8688dedf16c-20230715160148910900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:827518711034:targetgroup/nginx-alb-tg/71b6d8688dedf16c",
            "target_id": "i-075446d84323b5c5e"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:827518711034:targetgroup/nginx-alb-tg/71b6d8688dedf16c-20230715160149152200000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:827518711034:targetgroup/nginx-alb-tg/71b6d8688dedf16c",
            "target_id": "i-08dcc1fd574cc5364"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "module.web_app_s3.aws_s3_bucket_policy.web_bucket",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:security-group/sg-055b170b0cae01a3e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055b170b0cae01a3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globo-web-app-development-nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "827518711034",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb2e1ab4be13f606"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:security-group/sg-0e4e66bd8f922e3d1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4e66bd8f922e3d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "globo-web-app-development-nginx_sg",
            "name_prefix": "",
            "owner_id": "827518711034",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb2e1ab4be13f606"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:network-acl/acl-04a6d8106e41f5767",
            "default_network_acl_id": "acl-04a6d8106e41f5767",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04a6d8106e41f5767",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "827518711034",
            "subnet_ids": [
              "subnet-0d6d4a09525936f89",
              "subnet-0e69840a804212945"
            ],
            "tags": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "vpc_id": "vpc-0cb2e1ab4be13f606"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:route-table/rtb-09353ab7f758c8280",
            "default_route_table_id": "rtb-09353ab7f758c8280",
            "id": "rtb-09353ab7f758c8280",
            "owner_id": "827518711034",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0cb2e1ab4be13f606"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:security-group/sg-08dc5db39437259e8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08dc5db39437259e8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "827518711034",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "vpc_id": "vpc-0cb2e1ab4be13f606"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:internet-gateway/igw-0181fd9ce5f945f46",
            "id": "igw-0181fd9ce5f945f46",
            "owner_id": "827518711034",
            "tags": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "vpc_id": "vpc-0cb2e1ab4be13f606"
          },
          "dependencies": [
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0181fd9ce5f945f46",
            "id": "r-rtb-01657aba8365390f21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01657aba8365390f2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_internet_gateway.this",
            "module.app.aws_route_table.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:route-table/rtb-01657aba8365390f2",
            "id": "rtb-01657aba8365390f2",
            "owner_id": "827518711034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb2e1ab4be13f606"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1204378f84baac9",
            "route_table_id": "rtb-01657aba8365390f2",
            "subnet_id": "subnet-0d6d4a09525936f89"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_route_table.public",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025447fd67e58be75",
            "route_table_id": "rtb-01657aba8365390f2",
            "subnet_id": "subnet-0e69840a804212945"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_route_table.public",
            "module.app.aws_subnet.public",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:subnet/subnet-0d6d4a09525936f89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6d4a09525936f89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827518711034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "vpc_id": "vpc-0cb2e1ab4be13f606"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:subnet/subnet-0e69840a804212945",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e69840a804212945",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827518711034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "vpc_id": "vpc-0cb2e1ab4be13f606"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_vpc.this",
            "module.app.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:vpc/vpc-0cb2e1ab4be13f606",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a6d8106e41f5767",
            "default_route_table_id": "rtb-09353ab7f758c8280",
            "default_security_group_id": "sg-08dc5db39437259e8",
            "dhcp_options_id": "dopt-067e434b9f487f65f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb2e1ab4be13f606",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09353ab7f758c8280",
            "owner_id": "827518711034",
            "tags": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            },
            "tags_all": {
              "Name": "globo-web-app-development-vpc",
              "billing_code": "827518711034",
              "company": "Globomantics",
              "environment": "development",
              "project": "Globomantics-test"
            }
          }
        }
      ]
    }
  ]
}